# crewAI-examples

./: .gitignore  .gitleaks.toml  README.md  aws.js  config.js  pre-commit-scan.sh  pyproject.toml  safe.js  set_git_pre-commit.sh  setup-security-scan.sh  setup.sh  setvenv.sh  unsafe.js
backup_20241217_124443/: agents.yaml  tasks.yaml
evaluate_resume/: pyproject.toml
evaluate_resume/src/: .gitignore
evaluate_resume/src/tools/: markdownTools.py
tests/: test_basic.py
util/: pre-commit-scan.sh  test-gitleaks.sh
