[tool.poetry]
name = "crewai-example"
version = "0.1.0"
description = "CrewAI example project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
crewai = "^0.86.0"
crewai-tools = "*"

#crewai-tools = "^0.17.0"
langchain = "^0.3.12"
openai = "^1.0.0"
python-dotenv = "^1.0.0"
PyYAML = "^6.0.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
#black = "^24.10.0"
pylint = "^3.0.3"
pytest = "^8.3.4"
mypy = "^1.7.1"
#pytest-cov = "^6.0.0"
#isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--verbose -ra -q"
